<resources>
    <string name="app_name">Contacts App</string>
    <string name="action_settings">Settings</string>
    <string name="user_message">Enter Your Message</string>
    <string name="submit_message">SEND</string>
    <string name="contactList">Contact List</string>
    <string name="menu_icon">menu icon</string>
    <string name="contact_header">contact header</string>
    <string name="search_icon">search icon</string>
    <string name="contact_divisor">contact divisor</string>
    <string name="backbutton">add contact back button</string>
    <string name="contact_page_title">Welcome</string>
    <string name="add_contact_headerOne">Add your contact by filling in their</string>
    <string name="add_contact_headerTwo">personal information</string>
    <string name="first_name">First Name</string>
    <string name="new_contact_first_name">contact first name</string>
    <string name="last_name">Last Name</string>
    <string name="new_contact_last_name">contact last name</string>
    <string name="email_address">Email</string>
    <string name="new_contact_email">contact email</string>
    <string name="phone_number">Phone</string>
    <string name="new_contact_phone">contact phone</string>
    <string name="submit_contact">Submit</string>
    <string name="sumbit_new_contact">add contact to contact list</string>
    <string name="conact_name">John Doe</string>
    <string name="contact_avater">contact avater</string>
    <string name="contact_no">08132998978</string>
    <string name="core_icon">more about contact</string>
</resources>
