<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="16dp"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/contact_avater_container"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:cardCornerRadius="100dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/avaterBgColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
            <ImageView
                android:id="@+id/contact_avater"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/contact_avater"
                android:scaleType="fitCenter"
                tools:srcCompat="@drawable/default_user" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/panton_bold_regular"
        android:text="@string/conact_name"
        android:textColor="@color/contactColor"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/contact_avater_container"
        app:layout_constraintTop_toTopOf="@+id/contact_avater_container" />

    <TextView
        android:id="@+id/contact_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/contact_no"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/contact_name"
        app:layout_constraintTop_toBottomOf="@+id/contact_name" />

    <ImageView
        android:id="@+id/more_icon"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/core_icon"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/contact_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/contact_no"
        app:layout_constraintTop_toTopOf="@+id/contact_name"
        app:layout_constraintVertical_bias="0.703"
        app:srcCompat="@drawable/more" />
</androidx.constraintlayout.widget.ConstraintLayout>