<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".AddContact">

    <ImageView
        android:id="@+id/goToContacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/backbutton"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/panton_bold_regular"
        android:text="@string/contact_page_title"
        android:textAlignment="viewStart"
        android:textColor="@color/fontColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/goToContacts"
        app:layout_constraintTop_toBottomOf="@+id/goToContacts" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/panton_regular"
        android:text="@string/add_contact_headerOne"
        android:textAlignment="viewStart"
        android:textColor="@color/colorContactIntro"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="237dp"
        android:layout_height="0dp"
        android:fontFamily="@font/panton_regular"
        android:text="@string/add_contact_headerTwo"
        android:textAlignment="center"
        android:textColor="@color/colorContactIntro"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/contact_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/panton_regular"
        android:labelFor="@id/user_first_name"
        android:text="@string/first_name"
        android:textColor="@color/colorContactFields"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/user_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="@font/panton_light"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="@color/fontColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/contact_first_name" />

    <TextView
        android:id="@+id/contact_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/panton_regular"
        android:labelFor="@id/user_last_name"
        android:text="@string/last_name"
        android:textColor="@color/colorContactFields"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/contact_first_name"
        app:layout_constraintTop_toBottomOf="@+id/user_first_name" />

    <EditText
        android:id="@+id/user_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="@font/panton_light"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="@color/fontColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_first_name"
        app:layout_constraintTop_toBottomOf="@+id/contact_last_name" />

    <TextView
        android:id="@+id/contact_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/panton_regular"
        android:labelFor="@id/user_email"
        android:text="@string/email_address"
        android:textColor="@color/colorContactFields"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/contact_last_name"
        app:layout_constraintTop_toBottomOf="@+id/user_last_name" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="@font/panton_light"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="viewStart"
        android:textColor="@color/fontColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_last_name"
        app:layout_constraintTop_toBottomOf="@+id/contact_email" />

    <TextView
        android:id="@+id/contact_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/panton_regular"
        android:labelFor="@id/user_phone"
        android:text="@string/phone_number"
        android:textColor="@color/colorContactFields"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/contact_last_name"
        app:layout_constraintTop_toBottomOf="@+id/user_email" />

    <EditText
        android:id="@+id/user_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="@font/panton_light"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textAlignment="viewStart"
        android:textColor="@color/fontColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/user_last_name"
        app:layout_constraintTop_toBottomOf="@+id/contact_phone" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="36dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="375dp" />

    <Button
        android:id="@+id/submit_contact"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:background="@color/fontColor"
        android:contentDescription="@string/sumbit_new_contact"
        android:fontFamily="@font/panton_bold_regular"
        android:text="@string/submit_contact"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/user_phone"
        app:layout_constraintVertical_bias="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>